# trivus-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.prod.example  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
docs/: AJUSTES_POS_REUNIAO_CLIENTE.md  API_REFERENCE.md  BILLING_GATEWAY.md  CONTEXTO_PROTOTIPO_FRONT.md  DEPLOY_COOLIFY.md  DE_PARA_E_TESTES.md  DUVIDAS_PLANO13.md  ECOSSISTEMA_TRIVUS.md  FORA_DO_ESCOPO_PLANO13.md  INTEGRACAO_AGENTE.md  INTEGRACAO_META.md  MIGRACAO_BACKEND.md  PLANO_13_AJUSTES_POS_REUNIAO.md  PLANO_13_BABY_STEPS.md  PROMPT_EXECUTOR_PLANO13.md  ROADMAP_TESTES.md  SPEC_MARKETING_RELATORIOS.md
docs/db/: MODELO_ALVO.md
docs/plans/: 00-INDEX.md  01-data-discovery-modeling.md  02-foundation-and-deploy.md  03-auth.md  04-users-and-stores.md  05-crm.md  05b-crm-templates.md  06-webhook-zapi.md  07-agenda.md  08-metrics.md  08b-advanced-metrics.md  09-legacy-goals-plans.md  10-bulk-send.md  10b-marketing.md  11-cleanup-cutover.md  12-ecosystem.md
migrations/: env.py
migrations/versions/: a0b13c39f141_add_ecosystem_tables.py  a4d19f37c8e1_action_plans_roadmap.py  b7e2f4a91c03_add_data_comprado_to_leads.py  c21ee08cf155_add_marketing_campaigns_and_fields.py  c7f4b2e918d5_add_meta_ads_integration.py  cc333adabd6f_initial_schema.py  d786a5d623c4_add_last_assigned_sdr_id_to_stores.py  e1a7c4d92b60_add_classified_quantity_to_goals.py  (+1 more)
scripts/: seed_admin.py  seed_demo.py
src/: main.py
(+225 files in other folders)
